# django-rest-toy

./: .gitignore  pyproject.toml
django-rest-toy/: main.py
