[tool.poetry]
name = "django-rest-toy"
version = "0.1.0"
description = "django rest framework sample application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
